# CompactNSearch

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml  ccpp.yml
demo/: CMakeLists.txt  main.cpp
include/: CompactNSearch  CompactNSearch.h  Config.h  DataStructures.h  PointSet.h
src/: CompactNSearch.cpp
